--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     border-bottom-right-radius: 1rem;
 }
 
+
 .navbar-content {
     max-width: 90vw;
     margin: 0 auto;
@@ -288,3 +289,9 @@ body {
     text-align: center;
     margin-bottom: 1rem;
 }
+.text-center h2 {
+    font-family: 'Rubik Bubbles', cursive;
+    font-size: 32px;
+    color: #ff1493;
+    text-align: center;
+    margin-bottom: 1rem;
